<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBlack"
    tools:context="com.example.almal.mp3tube.ui.OnBoarding.SignIn.SignInActivity">


    <android.support.constraint.Guideline
        android:id="@+id/signin_left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="35dp" />


    <android.support.constraint.Guideline
        android:id="@+id/signin_right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="317dp" />


    <android.support.v7.widget.Toolbar
        android:id="@+id/signin_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:elevation="4dp"
        app:navigationIcon="@drawable/ic_arrow_back_white"
        android:background="@color/colorLightBlack">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="?android:attr/actionBarSize"
            android:gravity="center"
            android:text="@string/sign_in_str"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/body_3_muli_Regular"
            android:textStyle="bold"
            />
    </android.support.v7.widget.Toolbar>


    <ImageView
        android:id="@+id/signin_logo_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/icons_metal_music"
        app:layout_constraintTop_toBottomOf="@id/signin_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_module_2"/>

    <TextView
        android:id="@+id/signin_intro_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/signin_logo_iv"
        app:layout_constraintRight_toLeftOf="@+id/signin_right_guideline"
        android:layout_marginTop="@dimen/margin_module_1"
        android:text="@string/sign_up_intro_str"
        android:textSize="@dimen/body_3_muli_bold"
        android:textColor="@color/colorWhite"
        app:layout_constraintLeft_toLeftOf="@+id/signin_left_guideline" />


    <TextView
        android:id="@+id/signin_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/signin_intro_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_module_4"
        android:text="@string/sign_in_str"
        android:textSize="@dimen/headline_bold_muli_bold"
        android:textStyle="bold"
        android:textColor="@color/colorLightPink"
        />


    <EditText
        android:id="@+id/signin_email_et"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/signin_tv"
        app:layout_constraintRight_toLeftOf="@+id/signin_right_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/signin_left_guideline"
        android:layout_marginTop="@dimen/margin_module_2"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:background="@drawable/ic_round_button"
        android:hint="@string/email_str"
        android:textSize="@dimen/label_bold"
        android:paddingLeft="@dimen/margin_module_2" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorBlack"
        app:layout_constraintTop_toTopOf="@+id/signin_email_et"
        app:layout_constraintBottom_toBottomOf="@+id/signin_password_et"
        app:layout_constraintLeft_toRightOf="@+id/signin_left_guideline"
        app:layout_constraintRight_toLeftOf="@+id/signin_right_guideline"
        />

    <EditText
        android:id="@+id/signin_password_et"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/signin_email_et"
        app:layout_constraintRight_toLeftOf="@+id/signin_right_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/signin_left_guideline"
        android:maxLines="1"
        android:inputType="textPassword"
        android:background="@drawable/ic_round_button"
        android:hint="@string/password_str"
        android:textSize="@dimen/label_bold"
        android:paddingLeft="@dimen/margin_module_2"/>


    <Button
        android:id="@+id/signin_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/signin_password_et"
        app:layout_constraintRight_toLeftOf="@+id/signin_right_guideline"
        app:layout_constraintLeft_toRightOf="@+id/signin_left_guideline"
        android:layout_marginTop="@dimen/margin_module_2"
        android:background="@drawable/ic_round_button_pink"
        android:text="@string/sign_in_str"
        android:textSize="@dimen/label_bold"
        android:textColor="@color/colorWhite"
        />



</android.support.constraint.ConstraintLayout>
