<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="56dp"
    android:background="@color/colorLightBlack"
    android:padding="@dimen/margin_module_2"
    tools:context="com.example.almal.mp3tube.ui.AudioHandling.AudioHandlingActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/profile_like_cv"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:cardBackgroundColor="@color/colorLightBlack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/like_photo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="@dimen/margin_module_3"
                android:background="@drawable/icons8_heart_outline_100"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_module_2"
                android:layout_toRightOf="@+id/like_photo"
                android:maxLines="2"
                android:text="@string/likes_str"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/body_1_muli_reg"
                android:textStyle="bold" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/profile_playlist_cv"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/margin_module_2"
        app:cardBackgroundColor="@color/colorLightBlack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_like_cv">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/playlist_photo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="@dimen/margin_module_3"
                android:background="@drawable/icons8_playlist_100"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_module_2"
                android:layout_toRightOf="@+id/playlist_photo"
                android:maxLines="2"
                android:text="@string/playlists_str"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/body_1_muli_reg"
                android:textStyle="bold" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/profile_history_cv"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/margin_module_2"
        app:cardBackgroundColor="@color/colorLightBlack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_playlist_cv">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/history_photo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="@dimen/margin_module_3"
                android:background="@drawable/icons_history_100"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_module_2"
                android:layout_toRightOf="@+id/history_photo"
                android:maxLines="2"
                android:text="@string/history_str"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/body_1_muli_reg"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/profile_history_arrow"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_module_2"
                android:background="@drawable/icons8_expand_arrow_100"
                android:scaleType="centerCrop" />
        </RelativeLayout>


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/profile_history_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/profile_history_cv"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</android.support.constraint.ConstraintLayout>
